# RustBound

./: .gitignore  README.md  dataset_asserter.py
DEPRECIATED/auto_ida/: cli.py
DEPRECIATED/bench_ghidra/: EXAMPLE_OUTPUT.txt  eval_ghidra.py  pyproject.toml
XDA/: requirements.txt  rustbound_cli.py  ryan_cli.py
XDA/fairseq/: trainer.py
XDA/fairseq/data/: data_utils_fast.cpp  resampling_dataset.py  token_block_utils_fast.cpp
XDA/fairseq/modules/: dynamic_crf_layer.py
XDA/scripts/pretrain/: larger_batch_pretrain_all.sh  ryan-pretrain-all.sh
auto_ida/: cli.py  rg_stripped_res.txt
bench_ghidra/: List_Function_and_Entry.py  README.md  eval_ghidra.py  ghidra_eval.py  pyproject.toml  robust_run_ghidra_functions.py  run_ghidra_function.py
bound_detector/: OUT.json  README.md  RNN_SUMMARY_O0.json  XDA_DATASET_SPLITS  cli.py  lightning_rnn.py  models.py  rnn.py
docs/: overview.md
ripkit/: Dockerfile  GHID_FUNC  LIEF_FUNC  OBJDUMP_COUNT.sh  README.md  dataset_stats.sh  flake.nix  ghid_chain.sh  ida_read_bounds.sh  mkdocs.yml  pyproject.toml  robust_run_ghidra_functions.py  shell.nix
ripkit/ascii_art/: ripkit_asrt.txt  uc_dassec.text
ripkit/docs/: cargo_cli.md  cli_reference.md  index.md  ripbin_cli.md
ripkit/ripkit/: __init__.py  analyze_cli.py  back_main.py  cli.py  cli_utils.py  evil_mod.py  main.py  ripbin_cli.py  score.py
ripkit/ripkit/auto_ida/: cli.py  function_bounds_list.py  function_list.py  pyproject.toml
ripkit/ripkit/auto_ida/dep_ripkit/cargo_picky/: cargo_reg_puller.py
ripkit/ripkit/auto_ida/ripkit/bin_types/: __init__.py  binary_file_types.py
ripkit/ripkit/auto_ida/ripkit/ripbin/: ripbin_db.py
ripkit/ripkit/bench_ghidra/: eval_ghidra.py  ghidra_bounds_script.py  setup.sh
ripkit/ripkit/binaryninja/: bin_ninja.py
ripkit/ripkit/cargo_picky/: __init__.py  cargo_build_context.py  cargo_builder.py  cargo_types.py  crates_io.py  db_cli.py  picky_exceptions.py
ripkit/ripkit/ghidra/: List_Function_and_Entry.py  cli.py  ghidra_bounds_script.py  setup.sh
ripkit/ripkit/ida/: cli.py  function_bounds_list.py  function_list.py
ripkit/ripkit/ida/dep_ripkit/: cli.py  main.py
ripkit/ripkit/ida/dep_ripkit/bin_types/: binary_file_types.py
ripkit/ripkit/ida/dep_ripkit/cargo_picky/: cargo_build_context.py  cargo_builder.py  cargo_reg_puller.py  cargo_types.py  crates_io.py  picky_exceptions.py
ripkit/ripkit/ida/dep_ripkit/ripbin/: ripbin_db.py  ripbin_exceptions.py
ripkit/ripkit/ida/ripkit/: main.py
ripkit/ripkit/ida/ripkit/cargo_picky/: __init__.py  crates_io.py  picky_exceptions.py
ripkit/ripkit/ida/ripkit/ripbin/: README.md  __init__.py  analyzer_types.py  binary_analyzer.py  ripbin_deterministic_db.py
ripkit/ripkit/ripbin/: DEPRECIATED_analysis_save.py  __init__.py  analyzer_types.py  attack_types.py  binary_analyzer.py  cli_utils.py  db.py  ripbin_deterministic_db.py  ripbin_exceptions.py
(+653 files in other folders)
