[tool.poetry]
name = "ripkit"
version = "0.2.0"
description = ""
authors = ["ESPR3SS0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
python-magic = "^0.4.27"
capstone = "^5.0.1"
pyelftools = "^0.29"
pefile = "^2023.2.7"
polars = "^0.19.0"
pandas = "^2.1.0"
lief = "^0.13.2"
alive-progress = "^3.1.4"
matplotlib = "^3.7.2"
rich = "^13.6.0"
setuptools = "^69.0.2"
art = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
