[tool.poetry]
name = "ripkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
typer = "0.9.4"
rich = "13.7.1"
numpy = "1.26.4"
matplotlib = "3.8.0"
art = "6.2"
alive-progress = "3.1.5"
lief = "0.13.2"
polars = "^0.20.28"
python-magic = "0.4.27"
pyelftools = "0.29"
pefile = "2023.2.7"
capstone = "5.0.1"
pandas = "2.2.2"
scipy = "1.13.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
