[tool.poetry]
name = "bench-ghidra"
version = "0.1.0"
description = ""
authors = ["ESPR3SS0 <98864173+ESPR3SS0@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bench_ghidra"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"
alive-progress = "^3.1.4"
lief = "^0.13.2"
polars = "^0.19.8"
python-magic = "^0.4.27"
pefile = "^2023.2.7"
pyelftools = "^0.30"
capstone = "^5.0.1"
rich = "^13.6.0"
typing-extensions = "^4.9.0"
setuptools = "^69.0.2"
pandas = "^2.1.4"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
