[tool.poetry]
name = "auto-ida"
version = "0.1.0"
description = ""
authors = ["ESPR3SS0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
pandas = "^2.1.3"
typing-extensions = "^4.8.0"
lief = "^0.13.2"
polars = "^0.19.13"
pyelftools = "^0.30"
python-magic = "^0.4.27"
pefile = "^2023.2.7"
capstone = "^5.0.1"
alive-progress = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
